# modem_stats

./: .bumpversion.cfg  .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  bumpversion.cfg  travis.yml
docs/: data.json  ignore_misc.md
src/: cli.yml  generate_data.rs  lib.rs  main.rs
tests/: test.rs  test_parsers.rs
tests/Docker/: Dockerfile  mosq.conf
tests/Docker/openssl/: Dockerfile  commands.sh  docker-exec.sh
ubus_simulator/: readme.md  setup.py
ubus_simulator/src/ubus_simulator/: __init__.py  cli.py  data.py
ubus_simulator/src/ubus_simulator/data/: mobile.json  network.json  system.json  wireless.json
ubus_simulator/test/: test_cli.py
