[package]
name = "modem_stats"
version = "1.0.0"
authors = ["Stephen Mott <stephen@motts.id.au>"]
edition = "2018"

[dependencies]
aws-iot-device-sdk-rust = "0.0.4"
clap = {version = "~2.27.0", features = ["yaml"]}
log = "0.4"
json = "0.12.4"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 3